example database and similarity matrix pickle built

--- a/database_builder/bibs/1454234713357266.bib
+++ b/database_builder/bibs/1454234713357266.bib
@@ -1,1 +1,1 @@
-bibtex extraction failedbibtex extraction failedbibtex extraction failed
+bibtex extraction failedbibtex extraction failedbibtex extraction failedbibtex extraction failedbibtex extraction failedbibtex extraction failed
